--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 </li>
                                 <li class="nav-item d-flex align-items-center">
                                     <span class="@(!User.IsInRole("admin") ? "text-info fw-bold" : "text-danger fw-bold")">
-                                        Benvenuto @userName @(!User.IsInRole("admin") ? "(utente)" : "(ADMIN)")
+                                        Benvenuto @userName @(!User.IsInRole("4") ? "(utente)" : "(ADMIN)")
                                     </span>
                                 </li>
                                 <li class="nav-item">
