--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -40,17 +40,27 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Login" asp-action="LogOut"> Log-Out</a>
                                 </li>
+                                
+
                                 <li class="nav-item d-flex align-items-center">
                                     <span class="@(!User.IsInRole("admin") ? "text-info fw-bold" : "text-danger fw-bold")">
                                         Benvenuto @userName @(!User.IsInRole("admin") ? "(utente)" : "(ADMIN)")
                                     </span>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Create"> Aggiungi Prodotto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Lisy"> Lista Prodotti</a>
+                                </li>
+
 
                                 if (User.IsInRole("4"))
                                 {
 
                                    
                                 }
+                             
 
                             }
                             else
