--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -48,6 +48,10 @@
                                     </span>
                                 </li>
                                 <li class="nav-item">
+
+                                    <a class="nav-link text-dark" asp-controller="Animali" asp-action="Index"> Lista Animali </a>
+                                </li>
+                                <li>
                                     <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Create"> Aggiungi Prodotto</a>
                                 </li>
                                 <li class="nav-item">
