--- a/ClinicaVeterinaria/Views/Dittafornitrice/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Dittafornitrice/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Ditta</h1>
 
 <div>
-    <h4>Dittafornitrice</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdDittaFornitrice">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdDittaFornitrice">Modifica</a> |
+    <a asp-action="Index">Lista ditte</a>
 </div>
