--- a/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questo ricovero?</h3>
 <div>
-    <h4>Ricoveri</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -57,7 +56,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdRicovero" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" /> |
+        <a asp-action="Index">Lista ricoveri</a>
     </form>
 </div>
