--- a/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli</h1>
 
 <div>
-    <h4>Ricoveri</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,6 +54,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdRicovero">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.IdRicovero">Modifica</a> |
+    <a asp-action="Index">Lista ricoveri</a>
 </div>
