--- a/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Modifica Ricovero</h1>
 
-<h4>Ricoveri</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,14 +43,14 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Modifica" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Lista ricoveri</a>
 </div>
 
 @section Scripts {
