--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Lista Ricoveri</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Aggiungi ricovero</a>
 </p>
 <table class="table">
     <thead>
@@ -61,9 +61,9 @@
                 @Html.DisplayFor(modelItem => item.IdanimaleNavigation.Idanimale)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdRicovero">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdRicovero">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdRicovero">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a> |
+                <a asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
             </td>
         </tr>
 }
