Cronistoria visite per animale

--- a/ClinicaVeterinaria/Views/Animali/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Index.cshtml
@@ -33,6 +33,7 @@
 							<a asp-action="Edit" asp-route-id="@item.Idanimale">Edit</a> |
 							<a asp-action="Details" asp-route-id="@item.Idanimale">Details</a> |
 							<a asp-action="Delete" asp-route-id="@item.Idanimale">Delete</a>
+						<a asp-action="CronistoriaVisite" asp-controller="Visite" asp-route-id="@item.Idanimale">Visualizza Cronologia delle Visite</a>
 						</div>
 						
 				</div>
