--- a/ClinicaVeterinaria/Views/Veterinario/Visita.cshtml
+++ b/ClinicaVeterinaria/Views/Veterinario/Visita.cshtml
@@ -9,48 +9,61 @@
 <form asp-action="CreateVisita" method="post">
     @Html.AntiForgeryToken()
 
+    <!-- Data Visita -->
     <div class="form-group">
         <label asp-for="DataVisita" class="control-label"></label>
         <input asp-for="DataVisita" class="form-control" />
         <span asp-validation-for="DataVisita" class="text-danger"></span>
     </div>
 
+    <!-- Anamnesi -->
     <div class="form-group">
         <label asp-for="Anamnesi" class="control-label"></label>
         <textarea asp-for="Anamnesi" class="form-control"></textarea>
         <span asp-validation-for="Anamnesi" class="text-danger"></span>
     </div>
 
+    <!-- Descrizione Cura -->
     <div class="form-group">
         <label asp-for="DescrizioneCura" class="control-label"></label>
         <textarea asp-for="DescrizioneCura" class="form-control"></textarea>
         <span asp-validation-for="DescrizioneCura" class="text-danger"></span>
     </div>
 
+    <!-- Id Animale -->
     <div class="form-group">
         <label asp-for="IdAnimale" class="control-label"></label>
-        <select asp-for="IdAnimale" class="form-control" asp-items="ViewBag.AnimaliId"></select>
+        <select asp-for="IdAnimale" class="form-control" asp-items="ViewBag.IdAnimale"></select>
+    </div>
+
+    <!-- Aggiunta Ricetta Medica -->
+    <div class="form-group">
+        <label asp-for="IdRicetta" class="control-label"></label>
+        <select asp-for="IdRicetta" class="form-control" asp-items="ViewBag.IdRicetta"></select>
     </div>
 
     <div class="form-group">
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="aggiungiRicetta" value="true" /> Aggiungi Ricetta Medica
+                <input type="checkbox" id="aggiungiRicetta" name="aggiungiRicetta" value="true" /> Aggiungi Ricetta Medica
             </label>
         </div>
     </div>
 
+    <!-- Sezione Ricetta Medica -->
     <div id="ricettaMedica" style="display: none;">
         <h3>Ricetta Medica:</h3>
 
+        <!-- Descrizione Ricetta -->
         <div class="form-group">
             <label for="descrizioneRicetta">Descrizione Ricetta</label>
-            <textarea name="descrizioneRicetta" class="form-control"></textarea>
+            <textarea id="descrizioneRicetta" name="descrizioneRicetta" class="form-control"></textarea>
         </div>
 
+        <!-- Seleziona Prodotti -->
         <div class="form-group">
             <label for="prodottiId">Seleziona Prodotti:</label>
-            <select id="prodottiId" name="prodottiId" class="form-control" multiple="multiple" asp-items="ViewBag.ProdottoId"></select>
+            <select id="prodottiId" name="prodottiId[]" class="form-control" multiple asp-items="ViewBag.ProdottoId"></select>
         </div>
     </div>
 
@@ -60,11 +73,13 @@
 </form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
     <script>
         $(document).ready(function () {
-            $('input[name="aggiungiRicetta"]').change(function () {
+            $('#aggiungiRicetta').change(function () {
                 if ($(this).is(':checked')) {
                     $('#ricettaMedica').show();
                 } else {
