--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Index"> Lista Prodotti</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Create"> Smistamento </a>
+                                </li>
 
                                 if (User.IsInRole("Admin"))
                                 {
