--- a/ClinicaVeterinaria/Views/Animali/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Edit.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="FotoAnimale" class="control-label"></label>
-                <input asp-for="FotoAnimale" class="form-control" />
+                <input asp-for="FotoAnimale" class="form-control" type="file" />
                 <span asp-validation-for="FotoAnimale" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
