--- a/ClinicaVeterinaria/Views/Animali/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Index.cshtml
@@ -30,9 +30,9 @@
 							<p class="card-text">@item.IdUtente</p>
 						</div>
 						<div>
-							<a asp-action="Edit" asp-route-id="@item.Idanimale">Edit</a> |
-							<a asp-action="Details" asp-route-id="@item.Idanimale">Details</a> |
-							<a asp-action="Delete" asp-route-id="@item.Idanimale">Delete</a>
+						<a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Idanimale">Edit</a> |
+						<a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Idanimale">Details</a> |
+						<a class="btn btn-outline-primary" asp-action="Delete" asp-route-id="@item.Idanimale">Delete</a>
 						</div>
 						
 				</div>
