--- a/ClinicaVeterinaria/Views/Animali/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Create.cshtml
@@ -59,7 +59,7 @@
             </div>
             <div id="divIdUtente" class="form-group">
                 <label asp-for="IdUtente" class="control-label"></label>
-                <select asp-for="IdUtente" class ="form-control" asp-items="ViewBag.IdUtente"></select>
+                <select id="selectList" asp-for="IdUtente" class ="form-control" asp-items="ViewBag.IdUtente"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
