in cassetto problema Armadietto 1

--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -47,6 +47,8 @@
                                         Benvenuto @userName @(!User.IsInRole("4") ? "(utente)" : "(ADMIN)")
                                     </span>
                                 </li>
+
+
                                 <li class="nav-item">
 
                                     <a class="nav-link text-dark" asp-controller="Animali" asp-action="Index"> Lista Animali </a>
@@ -59,6 +61,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Create"> Smistamento </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Index"> Archivizione  </a>
                                 </li>
 
 
