fetch animale per numero chip

--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -67,6 +67,10 @@
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-controller="Dittafornitrice" asp-action="Index"> Ditte Fornitrici </a>
                                     </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="Ricoveri" asp-action="Index"> Ricoveri </a>
+                                    </li>
                                 }
 
 
