--- a/ClinicaVeterinaria/Views/Login/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Login/Index.cshtml
@@ -1,9 +1,20 @@
 ﻿<div class="contaienr">
 	<div class="row">
-		<div class="col-12">
-			<div class="display-1">
-				Eddaie ziooooooooo!!!
-			</div>
+		<div class="col-4">
+			
+				<button id="findAnimalbyMicroChip"> cerca animale per microchip</button>
+				<input  id="inputInserisciNumMicro" type="text"/>
+				<p id="infoOutput"></p>
+
+			<div id="containerBello"></div>
+
 		</div>
 	</div>
 </div>
+
+
+@section Scripts {
+	
+	<script src="./js/cercaAnimalePerMicrochip.js">
+	</script>
+}
