--- a/ClinicaVeterinaria/Views/Visite/CronistoriaVisite.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/CronistoriaVisite.cshtml
@@ -14,6 +14,7 @@
                 <th>Data Visita</th>
                 <th>Anamnesi</th>
                 <th>Descrizione Cura</th>
+                <th>Prezzo</th>
             </tr>
         </thead>
         <tbody>
@@ -23,6 +24,7 @@
                     <td>@visita.DataVisita</td>
                     <td>@visita.Anamnesi</td>
                     <td>@visita.DescrizioneCura</td>
+                    <td>@visita.PrezzoVisita</td>
                 </tr>
             }
         </tbody>
