--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
 
 
                                 <li class="nav-item d-flex align-items-center">
-                                    <span class="@(!User.IsInRole("admin") ? "text-info fw-bold" : "text-danger fw-bold")">
-                                        Benvenuto @userName @(!User.IsInRole("4") ? "(utente)" : "(ADMIN)")
+                                    <span class="@(!User.IsInRole("Admin") ? "text-info fw-bold" : "text-danger fw-bold")">
+                                        Benvenuto @userName @(!User.IsInRole("Admin") ? "(utente)" : "(ADMIN)")
                                     </span>
                                 </li>
                                 <li class="nav-item">
@@ -55,7 +55,7 @@
                                     <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Create"> Aggiungi Prodotto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Lisy"> Lista Prodotti</a>
+                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Index"> Lista Prodotti</a>
                                 </li>
 
                                 if (User.IsInRole("Admin"))
