--- a/ClinicaVeterinaria/Views/Visite/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Delete.cshtml
@@ -41,6 +41,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdRicettaNavigation.IdricettaMedica)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PrezzoVisita)
+        </dt>
+          <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PrezzoVisita)
+         </dd>
     </dl>
     
     <form asp-action="Delete">
