--- a/ClinicaVeterinaria/Views/Visite/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Details.cshtml
@@ -40,6 +40,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdRicettaNavigation.IdricettaMedica)
         </dd>
+        <dt class = "col-sm-2">
+          @Html.DisplayNameFor(model => model.PrezzoVisita)
+        </dt>
+        <dd class = "col-sm-10">
+          @Html.DisplayFor(model => model.PrezzoVisita)
+       </dd>
     </dl>
 </div>
 <div>
