--- a/ClinicaVeterinaria/Views/Visite/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.IdRicettaNavigation)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PrezzoVisita)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdRicettaNavigation.IdricettaMedica)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PrezzoVisita)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdVisita">Edit</a> |
