--- a/ClinicaVeterinaria/Views/Ricettemediche/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricettemediche/Index.cshtml
@@ -29,8 +29,8 @@
                 <td>@ricetta.IdUtenteNavigation.Nome</td>
                 <td>@ricetta.IdVisitaNavigation.DataVisita</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@ricetta.IdricettaMedica">Dettagli</a> |
-                    <a asp-action="Edit" asp-route-id="@ricetta.IdricettaMedica">Modifica</a> |
+                    <a asp-action="Details" asp-route-id="@ricetta.IdricettaMedica">Dettagli</a>
+                    <a asp-action="Edit" asp-route-id="@ricetta.IdricettaMedica">Modifica</a>
                     <a asp-action="Delete" asp-route-id="@ricetta.IdricettaMedica">Elimina</a>
                 </td>
             </tr>
