--- a/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Nomeprodotto" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Prezzo" class="control-label"></label>
+                <input asp-for="Prezzo" class="form-control" />
+                <span asp-validation-for="Prezzo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="IdDittaFornitrice" class="control-label"></label>
                 <select asp-for="IdDittaFornitrice" class ="form-control" asp-items="ViewBag.IdDittaFornitrice"></select>
             </div>
