--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.Nomeprodotto)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Prezzo)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IsMedicinale)
             </th>
             <th>
@@ -33,6 +36,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Nomeprodotto)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Prezzo)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsMedicinale)
             </td>
@@ -40,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.PossibiliUsi)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdDittaFornitriceNavigation.IdDittaFornitrice)
+                @Html.DisplayFor(modelItem => item.IdDittaFornitriceNavigation.NomeDitta)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdProdotto">Edit</a> |
