--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
@@ -1,14 +1,17 @@
 ﻿@model IEnumerable<ClinicaVeterinaria.Models.ProdottiInCassetto>
 
-@{
-    ViewData["Title"] = "Index";
-}
+
 @{
     // Recupera i dati dalla ViewBag
     var prodottiInArmadietto = ViewBag.ProdottiInArmadietto as List<string>;
 }
-<h1>Index</h1>
-
+<h1>Archivio</h1>
+<form asp-controller="ProdottiInCAssettoes" asp-action="Index" method="get">
+    <div class="form-group">
+        <input type="text" name="prodotto" class="form-control" placeholder="Cerca per Nome Prodotto">
+        <button type="submit" class="btn btn-primary">Cerca</button>
+    </div>
+</form>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -16,13 +19,16 @@
 @if (prodottiInArmadietto != null && prodottiInArmadietto.Any())
 {
     <div>
-        <h4>Prodotti in Armadietto</h4>
+
+
+      
+    @*     <h4>Prodotti in Armadietto</h4>
         <ul>
             @foreach (var armadietto in prodottiInArmadietto)
             {
                 <li>@armadietto</li>
             }
-        </ul>
+        </ul> *@
     </div>
 }
 <table class="table">
