--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -57,13 +57,13 @@
                                     <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Create"> Aggiungi Prodotto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Lisy"> Lista Prodotti</a>
+                                    <a class="nav-link text-dark" asp-controller="Prodotti" asp-action="Index"> Lista Prodotti</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Create"> Smistamento </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Index"> Archivizione  </a>
+                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Index"> Archivio Farmaci  </a>
                                 </li>
 
 
