Commit Martedi sera

--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                     <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Create"> Smistamento </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Index"> Archivizione  </a>
+                                    <a class="nav-link text-dark" asp-controller="ProdottiInCassettoes" asp-action="Index"> Archivio Farmaci  </a>
                                 </li>
 
                                 if (User.IsInRole("Admin"))
