WIP-Update-Salvo2.0Branch

--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Index.cshtml
@@ -68,7 +68,7 @@
                     @Html.DisplayFor(modelItem => item.IdCassettoNavigation.IdArmadietto)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.IdProdottoNavigation.Prezzo)
+                    @Html.DisplayFor(modelItem => item.IdProdottoNavigation.PrezzoProdotto)
                 </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdProdottoInCassetto">Edit</a> |
