--- a/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
+++ b/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
@@ -7,7 +7,7 @@
 @* <h1>@ViewData["Title"]</h1> *@
 <h2 id="tableTitle">@ViewData["Title"]</h2>
 
-<select id="tableSelect" class="form-select">
+<select id="tableSelect" class="form-select mb-3">
     <option value="Utenti">Utenti</option>
     <option value="Animali">Animali</option>
     <option value="Armadietti">Armadietti</option>
@@ -17,12 +17,11 @@
     <option value="Ricoveri">Ricoveri</option>
     <option value="Vendite">Vendite</option>
     <option value="Visite">Visite</option>
-
 </select>
 
 <div id="tablesContainer">
 
-        <table class="table" id="Utenti">
+        <table class="table text-center mb-3" id="Utenti">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -81,7 +80,7 @@
 @if (Model.Animali != null && Model.Animali.Any())
 {
     <h2>Animali</h2>
-        <table class="table" id="Animali">
+        <table class="table text-center mb-3" id="Animali">
         <thead>
             <tr>
                 <th>Nome</th>
@@ -112,7 +111,7 @@
 @if (Model.Armadietti != null && Model.Armadietti.Any())
 {
     <h2>Armadietti</h2>
-        <table class="table" id="Armadietti">
+        <table class="table text-center mb-3" id="Armadietti">
         <thead>
             <tr>
                 <th>ID Armadietto</th>
@@ -137,7 +136,7 @@
 @if (Model.Dittafornitrice != null && Model.Dittafornitrice.Any())
 {
     <h2>Ditte Fornitrici</h2>
-        <table class="table" id="DitteFornitrici">
+        <table class="table text-center mb-3" id="DitteFornitrici">
         <thead>
             <tr>
                 <th>Nome Ditta</th>
@@ -164,7 +163,7 @@
 @if (Model.ProdottiInCassetto != null && Model.ProdottiInCassetto.Any())
 {
     <h2>Prodotti nei Cassetti</h2>
-        <table class="table" id="ProdottiNeiCassetti">
+        <table class="table text-center mb-3" id="ProdottiNeiCassetti">
         <thead>
             <tr>
                 <th>Prodotto</th>
@@ -193,7 +192,7 @@
 @if (Model.Ricettemediche != null && Model.Ricettemediche.Any())
 {
     <h2>Ricette Mediche</h2>
-        <table class="table" id="RicetteMediche">
+        <table class="table text-center mb-3" id="RicetteMediche">
         <thead>
             <tr>
                 <th>Descrizione</th>
@@ -222,7 +221,7 @@
 @if (Model.Ricoveri != null && Model.Ricoveri.Any())
 {
     <h2>Ricoveri</h2>
-        <table class="table" id="Ricoveri">
+        <table class="table text-center mb-3" id="Ricoveri">
         <thead>
             <tr>
                 <th>Data Inizio</th>
@@ -253,7 +252,7 @@
 @if (Model.Vendite != null && Model.Vendite.Any())
 {
     <h2>Vendite</h2>
-        <table class="table" id="Vendite">
+        <table class="table text-center mb-3" id="Vendite">
         <thead>
             <tr>
                 <th>Prodotto</th>
@@ -284,7 +283,7 @@
 @if (Model.Visite != null && Model.Visite.Any())
 {
     <h2>Visite</h2>
-        <table class="table" id="Visite">
+        <table class="table text-center mb-3" id="Visite">
         <thead>
             <tr>
                 <th>Data Visita</th>
